authul_macros/tests/errors/table/no_struct.rs
#[authul_macros::authul_table]
