authul_macros/tests/errors/table/no_struct.stderr
error: expected item after attributes
 --> tests/errors/table/no_struct.rs:1:1
  |
1 | #[authul_macros::authul_table]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
